charts/django/v0.2.1/README.md


# django

![Version: 0.2.1](https://img.shields.io/badge/Version-0.2.1-informational?style=flat-square) ![AppVersion: 3.1](https://img.shields.io/badge/AppVersion-3.1-informational?style=flat-square)

Generic chart for basic Django-based web app

**Homepage:** <https://www.djangoproject.com/>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| lucernae | lana.pcfre@gmail.com |  |

## Source Code

* <https://github.com/django/django>

## Requirements

| Repository | Name | Version |
|------------|------|---------|
| [../../common/v1.0.0](../../common/v1.0.0) | common | 1.0.0 |
| [../../postgis/v0.2.1](../../postgis/v0.2.1) | postgis | 0.2.1 |

# Long Description

This is Kartoza's base chart for Django app

This helm chart was intended to be the base chart for any Django-based deployment.
The customization are provided via values.yml and pod environment.

# How to Use

For helm:

```bash
helm install release-name kartoza/django
```

# Intro

This chart bootstrap a Django web framework.
Django is a web framework based on python programming language.
It is a general purpose web framework. This helm chart is created as a base chart
for you. It is supposed to be overrideable for you to provide your own Django image/app.

Django can be deployed as a standalone web app. In this chart, we deployed Django coupled with
Nginx webserver with WSGI protocol and Postgis database backend.

# What it can do

The default deployment install generic Django image coupled with Nginx webserver and Postgis RDBMS backend.

Optional customizations:

- Enable/Disable Postgis RDBMS
- Override entrypoint script of Django
- Override python module requirements
- Override Nginx config (if you want to use different staticfiles mapping or protocols)
- Add [extra configuration file](#extraConfigMap)
- Add custom settings.py
- Add custom urls.py
- Override DJANGO_SETTINGS_MODULE
- Toggle Debug mode

## Values
<table height="400px">
	<thead>
		<th>Key</th>
		<th>Type</th>
		<th>Default</th>
		<th>Description</th>
	</thead>
	<tbody>
		<tr>
			<td><a id="extraConfigMap">extraConfigMap</a></td>
			<td>tpl/map</td>
			<td><pre lang="gotpl">
extraConfigMap: |
 
</pre></td>
			<td>Define this for extra config map to be included in django-shared-config</td>
		</tr>
		<tr>
			<td><a id="extraPodEnv">extraPodEnv</a></td>
			<td>tpl/array</td>
			<td><pre lang="gotpl">
extraPodEnv: |
  - name: DJANGO_SETTINGS_MODULE
    value: "django.settings"
  - name: DEBUG
    value: {{ .Values.global.debug | quote }}
  - name: ROOT_URLCONF
    value: {{ .Values.global.rootURLConf | quote }}
  - name: MAIN_APP_NAME
    value: {{ .Values.global.mainAppName | quote }}
 
</pre></td>
			<td>Define this for extra Django environment variables</td>
		</tr>
		<tr>
			<td><a id="extraPodSpec">extraPodSpec</a></td>
			<td>tpl/object</td>
			<td><pre lang="gotpl">
extraPodSpec: |
 
</pre></td>
			<td>This will be evaluated as pod spec</td>
		</tr>
		<tr>
			<td><a id="extraSecret">extraSecret</a></td>
			<td>tpl/map</td>
			<td><pre lang="gotpl">
extraSecret: |
 
</pre></td>
			<td>Define this for extra secrets to be included in django-shared-secret secret</td>
		</tr>
		<tr>
			<td><a id="extraVolume">extraVolume</a></td>
			<td>tpl/list</td>
			<td><pre lang="gotpl">
extraVolume: |
 
</pre></td>
			<td>Define this for extra volume (in pair with extraVolumeMounts)</td>
		</tr>
		<tr>
			<td><a id="extraVolumeMounts">extraVolumeMounts</a></td>
			<td>tpl/list</td>
			<td><pre lang="gotpl">
extraVolumeMounts: |
 
</pre></td>
			<td>Define this for extra volume mounts in the pod</td>
		</tr>
		<tr>
			<td><a id="global--adminEmail">global.adminEmail</a></td>
			<td>string/email</td>
			<td><pre lang="string/email">
admin@localhost
</pre></td>
			<td>Default admin email sender</td>
		</tr>
		<tr>
			<td><a id="global--adminPassword">global.adminPassword</a></td>
			<td>object/common.secret</td>
			<td><pre lang="yaml">
# -- (string) Specify this password value. If not, it will be autogenerated everytime chart upgraded
value:
valueFrom:
    secretKeyRef:
        name:
        key: admin-password

</pre></td>
			<td>Secret structure for Admin Password</td>
		</tr>
		<tr>
			<td><a id="global--adminPassword--value">global.adminPassword.value</a></td>
			<td>string</td>
			<td><pre lang="json">
null
</pre></td>
			<td>Specify this password value. If not, it will be autogenerated everytime chart upgraded</td>
		</tr>
		<tr>
			<td><a id="global--adminUser">global.adminUser</a></td>
			<td>string</td>
			<td><pre lang="json">
"admin"
</pre></td>
			<td>Default super user admin username</td>
		</tr>
		<tr>
			<td><a id="global--databaseHost">global.databaseHost</a></td>
			<td>string</td>
			<td><pre lang="json">
null
</pre></td>
			<td>Django database host location. By default this chart can generate standard postgres chart. So you can leave it as default. If you use external backend,  you must provide the value</td>
		</tr>
		<tr>
			<td><a id="global--databaseName">global.databaseName</a></td>
			<td>string</td>
			<td><pre lang="json">
"django"
</pre></td>
			<td>Django database name</td>
		</tr>
		<tr>
			<td><a id="global--databasePassword">global.databasePassword</a></td>
			<td>object/common.secret</td>
			<td><pre lang="yaml">
# -- (string) Specify this password value. If not, it will be autogenerated everytime chart upgraded. If you use external backend, you must provide the value
value:
valueFrom:
    secretKeyRef:
        name:
        key: database-password

</pre></td>
			<td>Secret structure for Database Password</td>
		</tr>
		<tr>
			<td><a id="global--databasePassword--value">global.databasePassword.value</a></td>
			<td>string</td>
			<td><pre lang="json">
null
</pre></td>
			<td>Specify this password value. If not, it will be autogenerated everytime chart upgraded. If you use external backend, you must provide the value</td>
		</tr>
		<tr>
			<td><a id="global--databasePort">global.databasePort</a></td>
			<td>int</td>
			<td><pre lang="json">
5432
</pre></td>
			<td>Django database port. By default this chart can generate standard postgres chart. So you can leave it as default. If you use external backend,  you must provide the value</td>
		</tr>
		<tr>
			<td><a id="global--databaseURL">global.databaseURL</a></td>
			<td>string</td>
			<td><pre lang="json">
{
  "value": null,
  "valueFrom": {
    "secretKeyRef": {
      "key": "database-url",
      "name": null
    }
  }
}
</pre></td>
			<td>Use this if you want to specify the full Database URL connection</td>
		</tr>
		<tr>
			<td><a id="global--databaseUsername">global.databaseUsername</a></td>
			<td>string</td>
			<td><pre lang="json">
"django_db_user"
</pre></td>
			<td>Database username backend to connect to. If you use external backend, provide the value</td>
		</tr>
		<tr>
			<td><a id="global--debug">global.debug</a></td>
			<td>string/bool</td>
			<td><pre lang="json">
"False"
</pre></td>
			<td>Python boolean literal, this will correspond to `DEBUG` environment variable inside the Django container. Useful as a debug switch.</td>
		</tr>
		<tr>
			<td><a id="global--djangoArgs">global.djangoArgs</a></td>
			<td>tpl/list</td>
			<td><pre lang="gotpl">
global.djangoArgs: |
  ["uwsgi","--chdir=${REPO_ROOT}","--module=${MAIN_APP_NAME}.wsgi","--socket=:8000","--http=0.0.0.0:8080","--processes=5","--buffer-size=8192"]
 
</pre></td>
			<td>The django command args to be passed to entrypoint command</td>
		</tr>
		<tr>
			<td><a id="global--djangoCommand">global.djangoCommand</a></td>
			<td>tpl/list</td>
			<td><pre lang="gotpl">
global.djangoCommand: |
  ["/opt/django/scripts/docker-entrypoint.sh"]
 
</pre></td>
			<td>The django entrypoint command to execute</td>
		</tr>
		<tr>
			<td><a id="global--djangoSecretKey">global.djangoSecretKey</a></td>
			<td>object/common.secret</td>
			<td><pre lang="yaml">
# -- (string) Specify this Django Secret string value. If not, it will be autogenerated everytime chart upgraded
value:
valueFrom:
    secretKeyRef:
        name:
        key: django-secret

</pre></td>
			<td>Secret structure for Django Secret Key</td>
		</tr>
		<tr>
			<td><a id="global--djangoSecretKey--value">global.djangoSecretKey.value</a></td>
			<td>string</td>
			<td><pre lang="json">
null
</pre></td>
			<td>Specify this Django Secret string value. If not, it will be autogenerated everytime chart upgraded</td>
		</tr>
		<tr>
			<td><a id="global--djangoSettingsModule">global.djangoSettingsModule</a></td>
			<td>string</td>
			<td><pre lang="json">
"django.settings"
</pre></td>
			<td>Django settings module to be used</td>
		</tr>
		<tr>
			<td><a id="global--existingConfig">global.existingConfig</a></td>
			<td>tpl/string</td>
			<td><pre lang="gotpl">
global.existingConfig: |
 
</pre></td>
			<td>Name of existing config</td>
		</tr>
		<tr>
			<td><a id="global--existingSecret">global.existingSecret</a></td>
			<td>tpl/string</td>
			<td><pre lang="gotpl">
global.existingSecret: |
 
</pre></td>
			<td>Name of existing secret</td>
		</tr>
		<tr>
			<td><a id="global--mainAppName">global.mainAppName</a></td>
			<td>string</td>
			<td><pre lang="json">
"django"
</pre></td>
			<td>The main app name to execute. Affects which settings, wsgi, and rootURL to use.</td>
		</tr>
		<tr>
			<td><a id="global--mediaRoot">global.mediaRoot</a></td>
			<td>path</td>
			<td><pre lang="json">
"/opt/django/media"
</pre></td>
			<td>Location to the media directory</td>
		</tr>
		<tr>
			<td><a id="global--nameOverride">global.nameOverride</a></td>
			<td>string</td>
			<td><pre lang="json">
"django"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="global--rootURLConf">global.rootURLConf</a></td>
			<td>string</td>
			<td><pre lang="json">
"django.urls"
</pre></td>
			<td>Django root URL conf to be used</td>
		</tr>
		<tr>
			<td><a id="global--sharedConfigName">global.sharedConfigName</a></td>
			<td>string</td>
			<td><pre lang="json">
"django-shared-config"
</pre></td>
			<td>Name of shared config store that will be generated</td>
		</tr>
		<tr>
			<td><a id="global--sharedSecretName">global.sharedSecretName</a></td>
			<td>string</td>
			<td><pre lang="json">
"django-shared-secret"
</pre></td>
			<td>Name of shared secret store that will be generated</td>
		</tr>
		<tr>
			<td><a id="global--siteName">global.siteName</a></td>
			<td>string</td>
			<td><pre lang="json">
"django"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="global--staticRoot">global.staticRoot</a></td>
			<td>path</td>
			<td><pre lang="json">
"/opt/django/static"
</pre></td>
			<td>Location to the static directory</td>
		</tr>
		<tr>
			<td><a id="global--storageClassName">global.storageClassName</a></td>
			<td>string</td>
			<td><pre lang="json">
null
</pre></td>
			<td>Storage class name used to provision PV</td>
		</tr>
		<tr>
			<td><a id="image">image</a></td>
			<td>object/container-image</td>
			<td><pre lang="yaml">
# -- Image registry
registry: docker.io
# -- Image repository
repository: lucernae/django-sample
# -- Image tag
tag: "3.1"
# -- (k8s/containers/image/imagePullPolicy) Image pullPolicy
pullPolicy: IfNotPresent

</pre></td>
			<td>Image map</td>
		</tr>
		<tr>
			<td><a id="image--pullPolicy">image.pullPolicy</a></td>
			<td>k8s/containers/image/imagePullPolicy</td>
			<td><pre lang="json">
"IfNotPresent"
</pre></td>
			<td>Image pullPolicy</td>
		</tr>
		<tr>
			<td><a id="image--registry">image.registry</a></td>
			<td>string</td>
			<td><pre lang="json">
"docker.io"
</pre></td>
			<td>Image registry</td>
		</tr>
		<tr>
			<td><a id="image--repository">image.repository</a></td>
			<td>string</td>
			<td><pre lang="json">
"lucernae/django-sample"
</pre></td>
			<td>Image repository</td>
		</tr>
		<tr>
			<td><a id="image--tag">image.tag</a></td>
			<td>string</td>
			<td><pre lang="json">
"3.1"
</pre></td>
			<td>Image tag</td>
		</tr>
		<tr>
			<td><a id="ingress--annotations">ingress.annotations</a></td>
			<td>dict</td>
			<td><pre lang="json">
{}
</pre></td>
			<td>Custom Ingress annotations</td>
		</tr>
		<tr>
			<td><a id="ingress--enabled">ingress.enabled</a></td>
			<td>bool</td>
			<td><pre lang="json">
false
</pre></td>
			<td>Set to true to generate Ingress resource</td>
		</tr>
		<tr>
			<td><a id="ingress--host">ingress.host</a></td>
			<td>tpl/string</td>
			<td><pre lang="gotpl">
ingress.host: |
 
</pre></td>
			<td>Set custom host name. (DNS name convention)</td>
		</tr>
		<tr>
			<td><a id="ingress--labels">ingress.labels</a></td>
			<td>dict</td>
			<td><pre lang="json">
{}
</pre></td>
			<td>Custom Ingress labels</td>
		</tr>
		<tr>
			<td><a id="ingress--tls--enabled">ingress.tls.enabled</a></td>
			<td>bool</td>
			<td><pre lang="json">
false
</pre></td>
			<td>Set to true to enable HTTPS</td>
		</tr>
		<tr>
			<td><a id="ingress--tls--secretName">ingress.tls.secretName</a></td>
			<td>string</td>
			<td><pre lang="json">
"django-tls"
</pre></td>
			<td>You must provide a secret name where the TLS cert is stored</td>
		</tr>
		<tr>
			<td><a id="persistence--mediaDir--accessModes[0]">persistence.mediaDir.accessModes[0]</a></td>
			<td>string</td>
			<td><pre lang="json">
"ReadWriteOnce"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="persistence--mediaDir--annotations">persistence.mediaDir.annotations</a></td>
			<td>object</td>
			<td><pre lang="json">
{}
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="persistence--mediaDir--enabled">persistence.mediaDir.enabled</a></td>
			<td>bool</td>
			<td><pre lang="json">
true
</pre></td>
			<td>Allow persistence</td>
		</tr>
		<tr>
			<td><a id="persistence--mediaDir--existingClaim">persistence.mediaDir.existingClaim</a></td>
			<td>string</td>
			<td><pre lang="json">
false
</pre></td>
			<td>Set to an existing claim if you have it</td>
		</tr>
		<tr>
			<td><a id="persistence--mediaDir--mountPath">persistence.mediaDir.mountPath</a></td>
			<td>path</td>
			<td><pre lang="json">
"/opt/django/media"
</pre></td>
			<td>This has to be the same with [global.mediaRoot](#global--mediaroot)</td>
		</tr>
		<tr>
			<td><a id="persistence--mediaDir--size">persistence.mediaDir.size</a></td>
			<td>string</td>
			<td><pre lang="json">
"8Gi"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="persistence--mediaDir--subPath">persistence.mediaDir.subPath</a></td>
			<td>string</td>
			<td><pre lang="json">
"media"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="persistence--staticDir--accessModes[0]">persistence.staticDir.accessModes[0]</a></td>
			<td>string</td>
			<td><pre lang="json">
"ReadWriteOnce"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="persistence--staticDir--annotations">persistence.staticDir.annotations</a></td>
			<td>object</td>
			<td><pre lang="json">
{}
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="persistence--staticDir--enabled">persistence.staticDir.enabled</a></td>
			<td>bool</td>
			<td><pre lang="json">
false
</pre></td>
			<td>Allow persistence</td>
		</tr>
		<tr>
			<td><a id="persistence--staticDir--existingClaim">persistence.staticDir.existingClaim</a></td>
			<td>string</td>
			<td><pre lang="json">
false
</pre></td>
			<td>Set to an existing claim if you have it</td>
		</tr>
		<tr>
			<td><a id="persistence--staticDir--mountPath">persistence.staticDir.mountPath</a></td>
			<td>path</td>
			<td><pre lang="json">
"/opt/django/static"
</pre></td>
			<td>This has to be the same with [global.staticRoot](#global--staticroot)</td>
		</tr>
		<tr>
			<td><a id="persistence--staticDir--size">persistence.staticDir.size</a></td>
			<td>string</td>
			<td><pre lang="json">
"8Gi"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="persistence--staticDir--subPath">persistence.staticDir.subPath</a></td>
			<td>string</td>
			<td><pre lang="json">
"static"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="postgis--enabled">postgis.enabled</a></td>
			<td>bool</td>
			<td><pre lang="json">
true
</pre></td>
			<td>Enable postgis as database backend by default. Set to false if using different external backend.</td>
		</tr>
		<tr>
			<td><a id="postgis--existingSecret">postgis.existingSecret</a></td>
			<td>tpl/string</td>
			<td><pre lang="gotpl">
postgis.existingSecret: |
 
</pre></td>
			<td>Existing secret to be used</td>
		</tr>
		<tr>
			<td><a id="postgis--extraConfigMap">postgis.extraConfigMap</a></td>
			<td>tpl/object</td>
			<td><pre lang="gotpl">
postgis.extraConfigMap: |
  django-db.sh: |
    #!/usr/bin/env bash
    DATABASE="{{ .Values.global.databaseName }}"
    # password comes from environment variables, so it can be retrieved from secret
    DATABASE_USER="{{ .Values.global.databaseUsername }}"
    # create database
    su postgres -c "createdb ${DATABASE}"
    # create role
    cat << EOF | su postgres -c "psql"
    CREATE ROLE ${DATABASE_USER};
    EOF
    # modify permissions
    cat << EOF | su postgres -c "psql -d ${DATABASE}"
    -- Create role
    ALTER ROLE ${DATABASE_USER} LOGIN PASSWORD '${DATABASE_PASSWORD}';
    ALTER DATABASE ${DATABASE} OWNER TO ${DATABASE_USER};
    EOF
 
</pre></td>
			<td>Extra config map for postgis to be included Can be used to pregenerate Django database for first setup</td>
		</tr>
		<tr>
			<td><a id="postgis--extraPodEnv">postgis.extraPodEnv</a></td>
			<td>tpl/array</td>
			<td><pre lang="gotpl">
postgis.extraPodEnv: |
  - name: DATABASE_PASSWORD
    valueFrom:
      secretKeyRef:
        name: {{ include "common.sharedSecretName" . | quote }}
        key: {{ .Values.global.databasePassword.valueFrom.secretKeyRef.key }}
 
</pre></td>
			<td>Extra pod env for postgis We expose Django database password in case we need to pregenerate it</td>
		</tr>
		<tr>
			<td><a id="postgis--extraVolume">postgis.extraVolume</a></td>
			<td>tpl/array</td>
			<td><pre lang="gotpl">
postgis.extraVolume: |
  - name: config-volume
    configMap:
      name: {{ template "postgis.fullname" . }}
      defaultMode: 0755
 
</pre></td>
			<td>Extra volume declaration for postgis We use extra volume to mount postgis configmap to pregenerate database</td>
		</tr>
		<tr>
			<td><a id="postgis--extraVolumeMounts">postgis.extraVolumeMounts</a></td>
			<td>tpl/array</td>
			<td><pre lang="gotpl">
postgis.extraVolumeMounts: |
  - mountPath: /docker-entrypoint-initdb.d/django-db.sh
    subPath: django-db.sh
    name: config-volume
 
</pre></td>
			<td>Extra volume mounts for postgis We use extra volume mounts postgis configmap to pregenerate database</td>
		</tr>
		<tr>
			<td><a id="postgis--postgresqlUsername">postgis.postgresqlUsername</a></td>
			<td>string</td>
			<td><pre lang="json">
"superuser"
</pre></td>
			<td></td>
		</tr>
		<tr>
			<td><a id="probe">probe</a></td>
			<td>tpl/object</td>
			<td><pre lang="gotpl">
probe: |
 
</pre></td>
			<td>Probe can be overridden</td>
		</tr>
		<tr>
			<td><a id="service--annotations">service.annotations</a></td>
			<td>dict</td>
			<td><pre lang="json">
{}
</pre></td>
			<td>Extra service annotations</td>
		</tr>
		<tr>
			<td><a id="service--clusterIP">service.clusterIP</a></td>
			<td>string</td>
			<td><pre lang="json">
""
</pre></td>
			<td>Specify `None` for headless service. Otherwise, leave them be.</td>
		</tr>
		<tr>
			<td><a id="service--externalIPs">service.externalIPs</a></td>
			<td>tpl/array</td>
			<td><pre lang="gotpl">
service.externalIPs: |
 
</pre></td>
			<td>Specify for LoadBalancer service type</td>
		</tr>
		<tr>
			<td><a id="service--nodePort">service.nodePort</a></td>
			<td>int</td>
			<td><pre lang="json">
null
</pre></td>
			<td>Specify node port, for NodePort service type</td>
		</tr>
		<tr>
			<td><a id="service--port">service.port</a></td>
			<td>int</td>
			<td><pre lang="json">
80
</pre></td>
			<td>Specify service port</td>
		</tr>
		<tr>
			<td><a id="service--type">service.type</a></td>
			<td>string</td>
			<td><pre lang="json">
"ClusterIP"
</pre></td>
			<td>Define k8s service for Django.</td>
		</tr>
		<tr>
			<td><a id="test--django--containers">test.django.containers</a></td>
			<td>tpl/array</td>
			<td><pre lang="(tpl)">

</pre></td>
			<td>List of containers override for testing</td>
		</tr>
	</tbody>
</table>

# Helm-Docs Chart Template Version
common-v1.0.0
