charts/django/v0.2.2/README.md


# django

![Version: 0.2.2](https://img.shields.io/badge/Version-0.2.2-informational?style=flat-square) ![AppVersion: 3.1](https://img.shields.io/badge/AppVersion-3.1-informational?style=flat-square)

Generic chart for basic Django-based web app

**Homepage:** <https://www.djangoproject.com/>

## Maintainers

| Name | Email | Url |
| ---- | ------ | --- |
| lucernae | lana.pcfre@gmail.com |  |

## Source Code

* <https://github.com/django/django>

## Requirements

| Repository | Name | Version |
|------------|------|---------|
| [../../common/v1.0.1](../../common/v1.0.1) | common | 1.0.1 |
| [../../postgis/v0.2.2](../../postgis/v0.2.2) | postgis | 0.2.2 |

# Long Description

This is Kartoza's base chart for Django app

This helm chart was intended to be the base chart for any Django-based deployment.
The customization are provided via values.yml and pod environment.

# How to Use

For helm:

```bash
helm install release-name kartoza/django
```

# Intro

This chart bootstrap a Django web framework.
Django is a web framework based on python programming language.
It is a general purpose web framework. This helm chart is created as a base chart
for you. It is supposed to be overrideable for you to provide your own Django image/app.

Django can be deployed as a standalone web app. In this chart, we deployed Django coupled with
Nginx webserver with WSGI protocol and Postgis database backend.

# What it can do

The default deployment install generic Django image coupled with Nginx webserver and Postgis RDBMS backend.

Optional customizations:

- Enable/Disable Postgis RDBMS
- Override entrypoint script of Django
- Override python module requirements
- Override Nginx config (if you want to use different staticfiles mapping or protocols)
- Add extra configuration file
- Add custom settings.py
- Add custom urls.py
- Override DJANGO_SETTINGS_MODULE
- Toggle Debug mode

## Values
<table height="800px">
	<thead>
		<th>Key</th>
		<th>Type</th>
		<th>Default</th>
		<th>Description</th>
	</thead>
	<tbody>
		<tr>
<td>

<a id="extraConfigMap" class="anchor">extraConfigMap</a>

</td>
<td>

tpl/map

</td>
<td>

```yaml
extraConfigMap: |
  # file_1: conf content
```

</td>
<td>

Define this for extra config map to be included in django-shared-config

</td>
</tr>
		<tr>
<td>

<a id="extraPodEnv" class="anchor">extraPodEnv</a>

</td>
<td>

tpl/array

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
extraPodEnv: |
  - name: DJANGO_SETTINGS_MODULE
    value: "django.settings"
  - name: DEBUG
    value: {{ .Values.global.debug | quote }}
  - name: ROOT_URLCONF
    value: {{ .Values.global.rootURLConf | quote }}
  - name: MAIN_APP_NAME
    value: {{ .Values.global.mainAppName | quote }}
```

</details>

</td>
<td>

Define this for extra Django environment variables

</td>
</tr>
		<tr>
<td>

<a id="extraPodSpec" class="anchor">extraPodSpec</a>

</td>
<td>

tpl/object

</td>
<td>

```yaml
extraPodSpec: |
  #  nodeSelector:
  #    a.label: value
```

</td>
<td>

This will be evaluated as pod spec

</td>
</tr>
		<tr>
<td>

<a id="extraSecret" class="anchor">extraSecret</a>

</td>
<td>

tpl/map

</td>
<td>

```yaml
extraSecret: |
  #  key_1: value_1
```

</td>
<td>

Define this for extra secrets to be included in django-shared-secret secret

</td>
</tr>
		<tr>
<td>

<a id="extraVolume" class="anchor">extraVolume</a>

</td>
<td>

tpl/list

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
extraVolume: |
  # You may potentially mount a config map/secret
  #  - name: custom-config
  #    configMap:
  #      name: geonode-config
```

</details>

</td>
<td>

Define this for extra volume (in pair with extraVolumeMounts)

</td>
</tr>
		<tr>
<td>

<a id="extraVolumeMounts" class="anchor">extraVolumeMounts</a>

</td>
<td>

tpl/list

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
extraVolumeMounts: |
  # You may potentially mount a config map/secret
  #  - name: custom-config
  #    mountPath: /docker-entrypoint.sh
  #    subPath: docker-entrypoint.sh
  #    readOnly: true
```

</details>

</td>
<td>

Define this for extra volume mounts in the pod

</td>
</tr>
		<tr>
<td>

<a id="global.adminEmail" class="anchor">global.adminEmail</a>

</td>
<td>

string/email

</td>
<td>

```string/email
admin@localhost
```

</td>
<td>

Default admin email sender

</td>
</tr>
		<tr>
<td>

<a id="global.adminPassword" class="anchor">global.adminPassword</a>

</td>
<td>

object/common.secret

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
# -- (string) Specify this password value. If not, it will be autogenerated everytime chart upgraded
value:
valueFrom:
    secretKeyRef:
        name:
        key: admin-password
```

</details>

</td>
<td>

Secret structure for Admin Password

</td>
</tr>
		<tr>
<td>

<a id="global.adminPassword.value" class="anchor">global.adminPassword.value</a>

</td>
<td>

string

</td>
<td>

```json
null
```

</td>
<td>

Specify this password value. If not, it will be autogenerated everytime chart upgraded

</td>
</tr>
		<tr>
<td>

<a id="global.adminUser" class="anchor">global.adminUser</a>

</td>
<td>

string

</td>
<td>

```json
"admin"
```

</td>
<td>

Default super user admin username

</td>
</tr>
		<tr>
<td>

<a id="global.databaseHost" class="anchor">global.databaseHost</a>

</td>
<td>

string

</td>
<td>

```json
null
```

</td>
<td>

Django database host location. By default this chart can generate standard postgres chart. So you can leave it as default. If you use external backend,  you must provide the value

</td>
</tr>
		<tr>
<td>

<a id="global.databaseName" class="anchor">global.databaseName</a>

</td>
<td>

string

</td>
<td>

```json
"django"
```

</td>
<td>

Django database name

</td>
</tr>
		<tr>
<td>

<a id="global.databasePassword" class="anchor">global.databasePassword</a>

</td>
<td>

object/common.secret

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
# -- (string) Specify this password value. If not, it will be autogenerated everytime chart upgraded. If you use external backend, you must provide the value
value:
valueFrom:
    secretKeyRef:
        name:
        key: database-password
```

</details>

</td>
<td>

Secret structure for Database Password

</td>
</tr>
		<tr>
<td>

<a id="global.databasePassword.value" class="anchor">global.databasePassword.value</a>

</td>
<td>

string

</td>
<td>

```json
null
```

</td>
<td>

Specify this password value. If not, it will be autogenerated everytime chart upgraded. If you use external backend, you must provide the value

</td>
</tr>
		<tr>
<td>

<a id="global.databasePort" class="anchor">global.databasePort</a>

</td>
<td>

int

</td>
<td>

```json
5432
```

</td>
<td>

Django database port. By default this chart can generate standard postgres chart. So you can leave it as default. If you use external backend,  you must provide the value

</td>
</tr>
		<tr>
<td>

<a id="global.databaseURL" class="anchor">global.databaseURL</a>

</td>
<td>

string

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
value:
valueFrom:
    secretKeyRef:
        name:
        key: database-url
```

</details>

</td>
<td>

Use this if you want to specify the full Database URL connection

</td>
</tr>
		<tr>
<td>

<a id="global.databaseUsername" class="anchor">global.databaseUsername</a>

</td>
<td>

string

</td>
<td>

```json
"django_db_user"
```

</td>
<td>

Database username backend to connect to. If you use external backend, provide the value

</td>
</tr>
		<tr>
<td>

<a id="global.debug" class="anchor">global.debug</a>

</td>
<td>

string/bool

</td>
<td>

```json
"False"
```

</td>
<td>

Python boolean literal, this will correspond to `DEBUG` environment variable inside the Django container. Useful as a debug switch.

</td>
</tr>
		<tr>
<td>

<a id="global.djangoArgs" class="anchor">global.djangoArgs</a>

</td>
<td>

tpl/list

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
global.djangoArgs: |
  ["uwsgi","--chdir=${REPO_ROOT}","--module=${MAIN_APP_NAME}.wsgi","--socket=:8000","--http=0.0.0.0:8080","--processes=5","--buffer-size=8192"]
```

</details>

</td>
<td>

The django command args to be passed to entrypoint command

</td>
</tr>
		<tr>
<td>

<a id="global.djangoCommand" class="anchor">global.djangoCommand</a>

</td>
<td>

tpl/list

</td>
<td>

```yaml
global.djangoCommand: |
  ["/opt/django/scripts/docker-entrypoint.sh"]
```

</td>
<td>

The django entrypoint command to execute

</td>
</tr>
		<tr>
<td>

<a id="global.djangoSecretKey" class="anchor">global.djangoSecretKey</a>

</td>
<td>

object/common.secret

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
# -- (string) Specify this Django Secret string value. If not, it will be autogenerated everytime chart upgraded
value:
valueFrom:
    secretKeyRef:
        name:
        key: django-secret
```

</details>

</td>
<td>

Secret structure for Django Secret Key

</td>
</tr>
		<tr>
<td>

<a id="global.djangoSecretKey.value" class="anchor">global.djangoSecretKey.value</a>

</td>
<td>

string

</td>
<td>

```json
null
```

</td>
<td>

Specify this Django Secret string value. If not, it will be autogenerated everytime chart upgraded

</td>
</tr>
		<tr>
<td>

<a id="global.djangoSettingsModule" class="anchor">global.djangoSettingsModule</a>

</td>
<td>

string

</td>
<td>

```json
"django.settings"
```

</td>
<td>

Django settings module to be used

</td>
</tr>
		<tr>
<td>

<a id="global.existingConfig" class="anchor">global.existingConfig</a>

</td>
<td>

tpl/string

</td>
<td>

```yaml
global.existingConfig: |
```

</td>
<td>

Name of existing config

</td>
</tr>
		<tr>
<td>

<a id="global.existingSecret" class="anchor">global.existingSecret</a>

</td>
<td>

tpl/string

</td>
<td>

```yaml
global.existingSecret: |
```

</td>
<td>

Name of existing secret

</td>
</tr>
		<tr>
<td>

<a id="global.fullnameOverride" class="anchor">global.fullnameOverride</a>

</td>
<td>

string

</td>
<td>

```json
null
```

</td>
<td>

You can override full release name

</td>
</tr>
		<tr>
<td>

<a id="global.mainAppName" class="anchor">global.mainAppName</a>

</td>
<td>

string

</td>
<td>

```json
"django"
```

</td>
<td>

The main app name to execute. Affects which settings, wsgi, and rootURL to use.

</td>
</tr>
		<tr>
<td>

<a id="global.mediaRoot" class="anchor">global.mediaRoot</a>

</td>
<td>

path

</td>
<td>

```json
"/opt/django/media"
```

</td>
<td>

Location to the media directory

</td>
</tr>
		<tr>
<td>

<a id="global.nameOverride" class="anchor">global.nameOverride</a>

</td>
<td>

string

</td>
<td>

```json
null
```

</td>
<td>

You can override release suffix

</td>
</tr>
		<tr>
<td>

<a id="global.rootURLConf" class="anchor">global.rootURLConf</a>

</td>
<td>

string

</td>
<td>

```json
"django.urls"
```

</td>
<td>

Django root URL conf to be used

</td>
</tr>
		<tr>
<td>

<a id="global.sharedConfigName" class="anchor">global.sharedConfigName</a>

</td>
<td>

string

</td>
<td>

```json
"django-shared-config"
```

</td>
<td>

Name of shared config store that will be generated

</td>
</tr>
		<tr>
<td>

<a id="global.sharedSecretName" class="anchor">global.sharedSecretName</a>

</td>
<td>

string

</td>
<td>

```json
"django-shared-secret"
```

</td>
<td>

Name of shared secret store that will be generated

</td>
</tr>
		<tr>
<td>

<a id="global.siteName" class="anchor">global.siteName</a>

</td>
<td>

string

</td>
<td>

```json
"django"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="global.staticRoot" class="anchor">global.staticRoot</a>

</td>
<td>

path

</td>
<td>

```json
"/opt/django/static"
```

</td>
<td>

Location to the static directory

</td>
</tr>
		<tr>
<td>

<a id="global.storageClassName" class="anchor">global.storageClassName</a>

</td>
<td>

string

</td>
<td>

```json
null
```

</td>
<td>

Storage class name used to provision PV

</td>
</tr>
		<tr>
<td>

<a id="image" class="anchor">image</a>

</td>
<td>

object/container-image

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
# -- Image registry
registry: docker.io
# -- Image repository
repository: lucernae/django-sample
# -- Image tag
tag: "3.1"
# -- (k8s/containers/image/imagePullPolicy) Image pullPolicy
pullPolicy: IfNotPresent
```

</details>

</td>
<td>

Image map

</td>
</tr>
		<tr>
<td>

<a id="image.pullPolicy" class="anchor">image.pullPolicy</a>

</td>
<td>

k8s/containers/image/imagePullPolicy

</td>
<td>

```json
"IfNotPresent"
```

</td>
<td>

Image pullPolicy

</td>
</tr>
		<tr>
<td>

<a id="image.registry" class="anchor">image.registry</a>

</td>
<td>

string

</td>
<td>

```json
"docker.io"
```

</td>
<td>

Image registry

</td>
</tr>
		<tr>
<td>

<a id="image.repository" class="anchor">image.repository</a>

</td>
<td>

string

</td>
<td>

```json
"lucernae/django-sample"
```

</td>
<td>

Image repository

</td>
</tr>
		<tr>
<td>

<a id="image.tag" class="anchor">image.tag</a>

</td>
<td>

string

</td>
<td>

```json
"3.1"
```

</td>
<td>

Image tag

</td>
</tr>
		<tr>
<td>

<a id="ingress.annotations" class="anchor">ingress.annotations</a>

</td>
<td>

dict

</td>
<td>

```json
{}
```

</td>
<td>

Custom Ingress annotations

</td>
</tr>
		<tr>
<td>

<a id="ingress.enabled" class="anchor">ingress.enabled</a>

</td>
<td>

bool

</td>
<td>

```json
false
```

</td>
<td>

Set to true to generate Ingress resource

</td>
</tr>
		<tr>
<td>

<a id="ingress.host" class="anchor">ingress.host</a>

</td>
<td>

tpl/string

</td>
<td>

```yaml
ingress.host: |
```

</td>
<td>

Set custom host name. (DNS name convention)

</td>
</tr>
		<tr>
<td>

<a id="ingress.labels" class="anchor">ingress.labels</a>

</td>
<td>

dict

</td>
<td>

```json
{}
```

</td>
<td>

Custom Ingress labels

</td>
</tr>
		<tr>
<td>

<a id="ingress.tls.enabled" class="anchor">ingress.tls.enabled</a>

</td>
<td>

bool

</td>
<td>

```json
false
```

</td>
<td>

Set to true to enable HTTPS

</td>
</tr>
		<tr>
<td>

<a id="ingress.tls.secretName" class="anchor">ingress.tls.secretName</a>

</td>
<td>

string

</td>
<td>

```json
"django-tls"
```

</td>
<td>

You must provide a secret name where the TLS cert is stored

</td>
</tr>
		<tr>
<td>

<a id="persistence.mediaDir.accessModes[0]" class="anchor">persistence.mediaDir.accessModes[0]</a>

</td>
<td>

string

</td>
<td>

```json
"ReadWriteOnce"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="persistence.mediaDir.annotations" class="anchor">persistence.mediaDir.annotations</a>

</td>
<td>

object

</td>
<td>

```json
{}
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="persistence.mediaDir.enabled" class="anchor">persistence.mediaDir.enabled</a>

</td>
<td>

bool

</td>
<td>

```json
true
```

</td>
<td>

Allow persistence

</td>
</tr>
		<tr>
<td>

<a id="persistence.mediaDir.existingClaim" class="anchor">persistence.mediaDir.existingClaim</a>

</td>
<td>

string

</td>
<td>

```json
false
```

</td>
<td>

Set to an existing claim if you have it

</td>
</tr>
		<tr>
<td>

<a id="persistence.mediaDir.mountPath" class="anchor">persistence.mediaDir.mountPath</a>

</td>
<td>

path

</td>
<td>

```json
"/opt/django/media"
```

</td>
<td>

This has to be the same with [global.mediaRoot](#global--mediaroot)

</td>
</tr>
		<tr>
<td>

<a id="persistence.mediaDir.size" class="anchor">persistence.mediaDir.size</a>

</td>
<td>

string

</td>
<td>

```json
"8Gi"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="persistence.mediaDir.subPath" class="anchor">persistence.mediaDir.subPath</a>

</td>
<td>

string

</td>
<td>

```json
"media"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="persistence.staticDir.accessModes[0]" class="anchor">persistence.staticDir.accessModes[0]</a>

</td>
<td>

string

</td>
<td>

```json
"ReadWriteOnce"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="persistence.staticDir.annotations" class="anchor">persistence.staticDir.annotations</a>

</td>
<td>

object

</td>
<td>

```json
{}
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="persistence.staticDir.enabled" class="anchor">persistence.staticDir.enabled</a>

</td>
<td>

bool

</td>
<td>

```json
false
```

</td>
<td>

Allow persistence

</td>
</tr>
		<tr>
<td>

<a id="persistence.staticDir.existingClaim" class="anchor">persistence.staticDir.existingClaim</a>

</td>
<td>

string

</td>
<td>

```json
false
```

</td>
<td>

Set to an existing claim if you have it

</td>
</tr>
		<tr>
<td>

<a id="persistence.staticDir.mountPath" class="anchor">persistence.staticDir.mountPath</a>

</td>
<td>

path

</td>
<td>

```json
"/opt/django/static"
```

</td>
<td>

This has to be the same with [global.staticRoot](#global--staticroot)

</td>
</tr>
		<tr>
<td>

<a id="persistence.staticDir.size" class="anchor">persistence.staticDir.size</a>

</td>
<td>

string

</td>
<td>

```json
"8Gi"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="persistence.staticDir.subPath" class="anchor">persistence.staticDir.subPath</a>

</td>
<td>

string

</td>
<td>

```json
"static"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="postgis.enabled" class="anchor">postgis.enabled</a>

</td>
<td>

bool

</td>
<td>

```json
true
```

</td>
<td>

Enable postgis as database backend by default. Set to false if using different external backend.

</td>
</tr>
		<tr>
<td>

<a id="postgis.existingSecret" class="anchor">postgis.existingSecret</a>

</td>
<td>

tpl/string

</td>
<td>

```yaml
postgis.existingSecret: |
```

</td>
<td>

Existing secret to be used

</td>
</tr>
		<tr>
<td>

<a id="postgis.extraConfigMap" class="anchor">postgis.extraConfigMap</a>

</td>
<td>

tpl/object

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
postgis.extraConfigMap: |
  django-db.sh: |
    #!/usr/bin/env bash
    DATABASE="{{ .Values.global.databaseName }}"
    # password comes from environment variables, so it can be retrieved from secret
    DATABASE_USER="{{ .Values.global.databaseUsername }}"
    # create database
    su postgres -c "createdb ${DATABASE}"
    # create role
    cat << EOF | su postgres -c "psql"
    CREATE ROLE ${DATABASE_USER};
    EOF
    # modify permissions
    cat << EOF | su postgres -c "psql -d ${DATABASE}"
    -- Create role
    ALTER ROLE ${DATABASE_USER} LOGIN PASSWORD '${DATABASE_PASSWORD}';
    ALTER DATABASE ${DATABASE} OWNER TO ${DATABASE_USER};
    EOF
```

</details>

</td>
<td>

Extra config map for postgis to be included Can be used to pregenerate Django database for first setup

</td>
</tr>
		<tr>
<td>

<a id="postgis.extraPodEnv" class="anchor">postgis.extraPodEnv</a>

</td>
<td>

tpl/array

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
postgis.extraPodEnv: |
  - name: DATABASE_PASSWORD
    valueFrom:
      secretKeyRef:
        name: {{ include "common.sharedSecretName" . | quote }}
        key: {{ .Values.global.databasePassword.valueFrom.secretKeyRef.key }}
```

</details>

</td>
<td>

Extra pod env for postgis We expose Django database password in case we need to pregenerate it

</td>
</tr>
		<tr>
<td>

<a id="postgis.extraVolume" class="anchor">postgis.extraVolume</a>

</td>
<td>

tpl/array

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
postgis.extraVolume: |
  - name: config-volume
    configMap:
      name: {{ template "common.fullname" . }}
      defaultMode: 0755
```

</details>

</td>
<td>

Extra volume declaration for postgis We use extra volume to mount postgis configmap to pregenerate database

</td>
</tr>
		<tr>
<td>

<a id="postgis.extraVolumeMounts" class="anchor">postgis.extraVolumeMounts</a>

</td>
<td>

tpl/array

</td>
<td>

<details>
<summary>+Expand</summary>

```yaml
postgis.extraVolumeMounts: |
  - mountPath: /docker-entrypoint-initdb.d/django-db.sh
    subPath: django-db.sh
    name: config-volume
```

</details>

</td>
<td>

Extra volume mounts for postgis We use extra volume mounts postgis configmap to pregenerate database

</td>
</tr>
		<tr>
<td>

<a id="postgis.nameOverride" class="anchor">postgis.nameOverride</a>

</td>
<td>

string

</td>
<td>

```json
"postgis"
```

</td>
<td>

</td>
</tr>
		<tr>
<td>

<a id="postgis.postgresqlPassword" class="anchor">postgis.postgresqlPassword</a>

</td>
<td>

object/common.secret

</td>
<td>

```yaml
value:
```

</td>
<td>

Postgres super user password. It can be different than [global.databasePassword](#global--databasePassword)

</td>
</tr>
		<tr>
<td>

<a id="postgis.postgresqlUsername" class="anchor">postgis.postgresqlUsername</a>

</td>
<td>

string

</td>
<td>

```json
"superuser"
```

</td>
<td>

Postgres super user account. It can be different than [global.databaseUsername](#global--databaseUsername)

</td>
</tr>
		<tr>
<td>

<a id="probe" class="anchor">probe</a>

</td>
<td>

tpl/object

</td>
<td>

```yaml
probe: |
```

</td>
<td>

Probe can be overridden

</td>
</tr>
		<tr>
<td>

<a id="service.annotations" class="anchor">service.annotations</a>

</td>
<td>

dict

</td>
<td>

```json
{}
```

</td>
<td>

Extra service annotations

</td>
</tr>
		<tr>
<td>

<a id="service.clusterIP" class="anchor">service.clusterIP</a>

</td>
<td>

string

</td>
<td>

```json
""
```

</td>
<td>

Specify `None` for headless service. Otherwise, leave them be.

</td>
</tr>
		<tr>
<td>

<a id="service.externalIPs" class="anchor">service.externalIPs</a>

</td>
<td>

tpl/array

</td>
<td>

```yaml
service.externalIPs: |
```

</td>
<td>

Specify for LoadBalancer service type

</td>
</tr>
		<tr>
<td>

<a id="service.nodePort" class="anchor">service.nodePort</a>

</td>
<td>

int

</td>
<td>

```json
null
```

</td>
<td>

Specify node port, for NodePort service type

</td>
</tr>
		<tr>
<td>

<a id="service.port" class="anchor">service.port</a>

</td>
<td>

int

</td>
<td>

```json
80
```

</td>
<td>

Specify service port

</td>
</tr>
		<tr>
<td>

<a id="service.type" class="anchor">service.type</a>

</td>
<td>

string

</td>
<td>

```json
"ClusterIP"
```

</td>
<td>

Define k8s service for Django.

</td>
</tr>
		<tr>
<td>

<a id="test.django.containers" class="anchor">test.django.containers</a>

</td>
<td>

tpl/array

</td>
<td>

```(tpl)

```

</td>
<td>

List of containers override for testing

</td>
</tr>
	</tbody>
</table>

# Helm-Docs Chart Template Version
common-v1.0.1
